--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="jackfruit-tacos.html">Jackfruit Tacos</a>
+    <a href="veganburritos.html">Vegan Burritos</a>
 </body>
 </html>
