Updates links to right names and remove duplicates

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="jackfruit-tacos.html">Jackfruit Tacos</a>
-    <a href="veganburritos.html">Vegan Burritos</a>
+    <a href="recipes/jackfruit-tacos.html">Jackfruit Tacos</a>
+    <a href="recipes/veganburritos.html">Vegan Burritos</a>
+    <a href="recipes/banhmi.html">Vegan Banh Mi</a>
 </body>
 </html>
