Change website title and put recipes in list

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/jackfruit-tacos.html">Jackfruit Tacos</a>
-    <a href="recipes/veganburritos.html">Vegan Burritos</a>
-    <a href="recipes/banhmi.html">Vegan Banh Mi</a>
+    <h1>Vegan Recipes</h1>
+    <ul>
+        <li><a href="recipes/jackfruit-tacos.html">Jackfruit Tacos</a></li>
+        <li><a href="recipes/veganburritos.html">Vegan Burritos</a></li>
+        <li><a href="recipes/banhmi.html">Vegan Banh Mi</a></li>
 </body>
 </html>
