Add css styling

--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Vegan Recipes</h1>
-    <ul>
+    <h1>V*gan Recipes 🫢</h1>
+    <img src="veggies.png" alt="an image of happy smiling cartoon vegetables">
+    <p>Don't be scared of the v-word. These recipes are easy, fun, and most importantly, delicious!</p>
+    <ul class="homelist">
         <li><a href="recipes/jackfruit-tacos.html">Jackfruit Tacos</a></li>
-        <li><a href="recipes/veganburritos.html">Vegan Burritos</a></li>
-        <li><a href="recipes/banhmi.html">Vegan Banh Mi</a></li>
+        <li><a href="recipes/veganburritos.html">V*gan Burritos</a></li>
+        <li><a href="recipes/banhmi.html">V*gan Banh Mi</a></li>
 </body>
 </html>
