--- a/recipes/banhmi.html
+++ b/recipes/banhmi.html
@@ -1,5 +1,8 @@
+<head>
+    <link rel="stylesheet" href="../style.css">
+</head>
 <body>
-    <h1>Vegan Banh Mi</h1>
+    <h1>V*gan Banh Mi</h1>
     <h3>Description</h3>
     <p>Your favorite Vietnamese sandwich has gone vegan, served in a bowl. Classic ingredients are replaced with vegan alternatives and you get to eat it with a fork. Refrigerate any of the leftover vegan fish sauce for other recipes that call for fish sauce or oyster sauce.</p>
     <h3>Ingredients</h3>
