--- a/recipes/veganburritos.html
+++ b/recipes/veganburritos.html
@@ -1,5 +1,8 @@
+<head>
+    <link rel="stylesheet" href="../style.css">
+</head>
 <body>
-    <h1>Vegan Burritos</h1>
+    <h1>V*gan Burritos</h1>
     <h3>Description</h3>
     <p>These healthy vegan burritos are easy to make and delicious.</p>
     <h3>Ingredients</h3>
