--- a/recipes/jackfruit-tacos.html
+++ b/recipes/jackfruit-tacos.html
@@ -1,5 +1,8 @@
+<head>
+    <link rel="stylesheet" href="../style.css">
+</head>
 <body>
-    <h1>Jackfruit Vegan Tacos</h1>
+    <h1>Jackfruit V*gan Tacos</h1>
     <h3>Description</h3>
     <p>Jackfruit is a great vegan alternative to shredded chicken to use in tacos. These jackfruit tacos are delicious and vegan! Choose your favorite taco toppings, such as lettuce, tomato, cilantro, avocado, vegan cheese, and vegan sour cream.</p>
     <h3>Ingredients</h3>
