Add style elements

--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 <body>
     <h1>V*gan Recipes 🫢</h1>
     <img src="veggies.png" alt="an image of happy smiling cartoon vegetables">
-    <p>Don't be scared of the v-word. These recipes are easy, fun, and most importantly, delicious!</p>
-    <ul class="homelist">
-        <li><a href="recipes/jackfruit-tacos.html">Jackfruit Tacos</a></li>
-        <li><a href="recipes/veganburritos.html">V*gan Burritos</a></li>
-        <li><a href="recipes/banhmi.html">V*gan Banh Mi</a></li>
+    <p class="greeting">Don't be scared of the v-word. These recipes are easy, fun, and most importantly, delicious!</p>
+        <a href="recipes/jackfruit-tacos.html">Jackfruit Tacos</a>
+        <a href="recipes/veganburritos.html">V*gan Burritos</a>
+        <a href="recipes/banhmi.html">V*gan Banh Mi</a>
 </body>
 </html>
